src/objects/Presales_Calendar_Event__c.object
<CustomObject>
    <description>Events that show up on one of the presales calendars that are generic like holidays, team blocks, etc.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sales_Consulting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this event will show up on the Sales Consulting calendar for the specified region(s).</inlineHelpText>
        <label>Sales Consulting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this event will show up on the Sales calendar for the specified region(s).</inlineHelpText>
        <label>Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_Consulting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this event will show up on the Value Consulting calendar for the specified region(s).</inlineHelpText>
        <label>Value Consulting</label>
        <type>Checkbox</type>
    </fields>
    <label>Presales Calendar Event</label>
    <nameField>
        <displayFormat>PCE-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales Calendar Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>